--- a/css/home.css
+++ b/css/home.css
@@ -269,7 +269,7 @@ a {
 }
 h2 {
   color: #fff;
-  font-size: 2vh;
+  font-size: 2rem;
 }
 
 .container {
@@ -396,6 +396,10 @@ h2 {
     margin-bottom: 1.7vh;
   }
 
+  h2 {
+    font-size: 1.5rem;
+  }
+
   #banner {
     height: 400px;
   }
@@ -414,6 +418,12 @@ h2 {
 
   .btn-Registrarse {
     font-size: 2vh;
+  }
+
+  .menu {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -444,6 +454,10 @@ h2 {
   .card-banner h1 {
     margin-top: 1vh;
     margin-bottom: 1vh;
+  }
+
+  h2 {
+    font-size: 1.5rem;
   }
   .card-banner h2 {
     font-size: 1.1vh;
@@ -550,12 +564,9 @@ h2 {
     align-items: center;
     justify-content: center;
   }
+  h2 {
+    font-size: 1.5rem;
+  }
+
 }
 
-@media screen and (min-width: 768px) and (max-width: 1123px) {
-  .menu {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-}
