--- a/views/contacto.html
+++ b/views/contacto.html
@@ -30,9 +30,48 @@
     </header>
     <main class="main">
       <section id="banner-register" class="d-flex">
-        <div class="card-banner container">
-          <h1>contacto</h1>
-        </div>
+        <div class="card-banner container banner-contacto">
+          <section id="form-wrapper">
+            <form action="#" method="post" novalidate id="form-register">
+              <h2>Envíanos tu consulta</h2>
+              <div class="form-control">
+
+                <input class="controls" type="text" name="name" required id="name" placeholder="Ingrese su Nombre">
+              </div>
+
+              <div class="form-control">
+            
+                <input class="controls" type="email" name="email" required id="email" placeholder="Ingrese su email">
+              </div>
+
+              <div class="form-control">
+ 
+                <textarea  class="controls" id="msg" name="mensaje" placeholder="Ingrese su consulta"></textarea>
+              </div>
+
+              <button class="btn" type="submit">Envía tu mensaje</button>
+
+              <div class="form-help">
+                <a href="#">¿Necesitas ayuda?</a>
+              </div>
+            </form>
+          </section>
+          <section id="form-wrapper">
+            <h2>Ubicación</h2>
+            <ul class="list-unstyled">
+              <li><i class="fa fa-map-marker"></i> <strong>Dirección:</strong> 
+                     <a target="_blank" href="https://www.google.com/maps/place/ELS+BRC+(Laboratorio+de+Electronica)/@-41.1413237,-71.2923388,17z/data=!4m14!1m7!3m6!1s0x961a7b7ebc18fd4d:0x99faadf910ea0a0e!2sELS+BRC+(Laboratorio+de+Electronica)!8m2!3d-41.1412361!4d-71.2883721!16s%2Fg%2F11g0lvm6pf!3m5!1s0x961a7b7ebc18fd4d:0x99faadf910ea0a0e!8m2!3d-41.1412361!4d-71.2883721!16s%2Fg%2F11g0lvm6pf?entry=ttu">9 de Julio 710. San Carlos de Bariloche</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-phone"></i> <strong>Teléfono:</strong> <a href="tel:0294154635057">011 3768 8372</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:info@convertec.com.ar">diego.bertossi@elsweb.com.ar</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-whatsapp"></i> <strong>WhatsApp:</strong> <a target="_blank" href="#">011 3768 8372</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-facebook"></i> <strong>Facebook:</strong> <a target="_blank" href="#">Seguinos</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-instagram"></i> <strong>Instagram:</strong> <a target="_blank" href="#">@els</a></li>
+      </ul>
+
+
+          </section>
+      </div>
+  
       </section>
     </main>
     <footer class="footer-container" id="idFooterSecciones">
