--- a/views/iniciar-sesion.html
+++ b/views/iniciar-sesion.html
@@ -46,7 +46,7 @@
             <button class="btn btnIniciarSesion" type="submit">Iniciar Sesión</button>
             </div>
             <div class="form-terms">
-                <a id="ayuda" class="ayuda" href="registrarse.html">Registrarse</a>
+                <a id="ayuda" class="ayuda" href="./register.html">Registrarse</a>
             </div>
         </form>
         </section>
