--- a/css/form_register.css
+++ b/css/form_register.css
@@ -19,7 +19,7 @@
 #form-wrapper {
 
     display: flex;
-    /* justify-content: space-between; */
+    flex-wrap: wrap;
     align-items: center;
     text-align: left;
     padding-left: 2rem;
@@ -27,6 +27,7 @@
     padding-bottom: 1rem;
     background-color: rgba(117, 170, 219, 0.7);
     border-radius: 50px 5px;
+    margin: 2rem;
 
 
 }
@@ -84,7 +85,8 @@
     width: 160px;
     border-radius: 10px;
     padding: 4px;
-    /* margin-left: 30px; */
+
+  
 
 }
 
@@ -135,3 +137,4 @@
 .d-iframe {
     width: 100%;
 }
+
