--- a/views/contacto.html
+++ b/views/contacto.html
@@ -61,11 +61,11 @@
             <ul class="list-unstyled">
               <li><i class="fa fa-map-marker"></i> <strong>Dirección:</strong> 
                      <a target="_blank" href="https://www.google.com/maps/place/ELS+BRC+(Laboratorio+de+Electronica)/@-41.1413237,-71.2923388,17z/data=!4m14!1m7!3m6!1s0x961a7b7ebc18fd4d:0x99faadf910ea0a0e!2sELS+BRC+(Laboratorio+de+Electronica)!8m2!3d-41.1412361!4d-71.2883721!16s%2Fg%2F11g0lvm6pf!3m5!1s0x961a7b7ebc18fd4d:0x99faadf910ea0a0e!8m2!3d-41.1412361!4d-71.2883721!16s%2Fg%2F11g0lvm6pf?entry=ttu">9 de Julio 710. San Carlos de Bariloche</a></li>
-              <li style="margin-top: 10px;"><i class="fa fa-phone"></i> <strong>Teléfono:</strong> <a href="tel:0294154635057">011 3768 8372</a></li>
-              <li style="margin-top: 10px;"><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:info@convertec.com.ar">diego.bertossi@elsweb.com.ar</a></li>
-              <li style="margin-top: 10px;"><i class="fa fa-whatsapp"></i> <strong>WhatsApp:</strong> <a target="_blank" href="#">011 3768 8372</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-phone"></i> <strong>Teléfono:</strong> <a href="#">011 1234 5678</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="#">campeones@gmail.com</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-whatsapp"></i> <strong>WhatsApp:</strong> <a target="_blank" href="#">011 1234 5678</a></li>
               <li style="margin-top: 10px;"><i class="fa fa-facebook"></i> <strong>Facebook:</strong> <a target="_blank" href="#">Seguinos</a></li>
-              <li style="margin-top: 10px;"><i class="fa fa-instagram"></i> <strong>Instagram:</strong> <a target="_blank" href="#">@els</a></li>
+              <li style="margin-top: 10px;"><i class="fa fa-instagram"></i> <strong>Instagram:</strong> <a target="_blank" href="#">@campeonesdelmundo</a></li>
       </ul>
 
 
