--- a/css/form_register.css
+++ b/css/form_register.css
@@ -28,6 +28,8 @@
     background-color: rgba(117, 170, 219, 0.7);
     border-radius: 50px 5px;
     margin: 2rem;
+    max-height: fit-content;
+    max-width: 20rem;
 
 
 }
