arreglos en contacto

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -46,7 +46,7 @@
 
               <div class="form-control">
  
-                <textarea  class="controls" id="msg" name="mensaje" placeholder="Ingrese su consulta"></textarea>
+                <textarea  class="controls areaMensaje" id="msg" name="mensaje" placeholder="Ingrese su consulta"></textarea>
               </div>
 
               <button class="btn" type="submit">Envía tu mensaje</button>
