--- a/css/form_register.css
+++ b/css/form_register.css
@@ -39,14 +39,13 @@
     font-size: 2rem;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 0.5rem;
 
 }
 
 
 .form-control {
 
-    /* display: flex; */
     justify-content: space-between;
     text-align: left;
     color: white;
@@ -66,7 +65,16 @@
     font-family: "Noto Serif", sans-serif;
     font-size: 14px;
     color: black;
+    max-width: 20rem;
 
+}
+
+
+.areaMensaje{
+    max-width: 20rem;
+    min-height: 5rem;
+    max-height: 10rem;
+    
 }
 
 #date {
