--- a/css/home.css
+++ b/css/home.css
@@ -275,14 +275,12 @@ h2 {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  
 }
 
 .card-banner {
   margin: 0 auto;
   text-align: center;
   padding: 0px 160px;
-  
 }
 
 #galeria,
@@ -315,82 +313,70 @@ h2 {
   margin-left: 3.5rem;
 }
 
-
 #banner {
-    /* margin-top: 5rem; */
-    background-image: url("../img/argentina-world.jpg");
-    background-size: cover;
-    background-position: top;
-    height: 90vh;
-    box-shadow: inset 0 0 0 2000px rgba(84, 84, 84, 0.5);
+  /* margin-top: 5rem; */
+  background-image: url("../img/argentina-world.jpg");
+  background-size: cover;
+  background-position: top;
+  height: 90vh;
+  box-shadow: inset 0 0 0 2000px rgba(84, 84, 84, 0.5);
 
-    color: white;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-
-
-.d-flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-
-.banner-contacto{
+  color: white;
 
   display: flex;
-  
-
-  }
-
- 
-.btn-Registrarse {
-    background-color: var(--azulClaro);
-    color: #ffffff;
-    padding: 0.5rem 1rem;
-    margin-top: 5rem;
-    border-radius: 10px;
-    font-size: 1.2rem;
-    font-weight: bolder;
-    text-decoration: none;
-    transition: transform 0.3s, box-shadow 0.3s;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
+.d-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.banner-contacto {
+  display: flex;
+}
+
+.btn-Registrarse {
+  background-color: var(--azulClaro);
+  color: #ffffff;
+  padding: 0.5rem 1rem;
+  margin-top: 5rem;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  text-decoration: none;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
 
 .btn-Registrarse:hover {
-    background-color: var(--celeste);
-    transform: scale(0.95);
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+  background-color: var(--celeste);
+  transform: scale(0.95);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
 
 .card-banner h1 {
-    color: #fff;
-    font-size: 5.2vw;
-    font-weight: 800;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    background: linear-gradient(90deg, #93CBEB, rgb(255, 255, 255));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 1px black;
-
+  color: #fff;
+  font-size: 5.2vw;
+  font-weight: 800;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background: linear-gradient(90deg, #93cbeb, rgb(255, 255, 255));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px black;
 }
 
 .card-banner h2 {
-    font-size: 0.9rem;
-    font-weight: normal;
-    margin-top: 0.6rem;
-    margin-bottom: 1.7rem;
-
+  font-size: 0.9rem;
+  font-weight: normal;
+  margin-top: 0.6rem;
+  margin-bottom: 1.7rem;
 }
-
 
 
 
@@ -440,7 +426,6 @@ h2 {
     justify-content: center;
   }
 }
-
 
 @media screen and (min-width: 481px) and (max-width: 767px) {
   .header .listaNav .lista {
@@ -516,7 +501,12 @@ h2 {
 
   .controls {
     font-size: 10px;
+    max-width: 13rem;
+   
+
   }
+
+
 
   .form-control {
     padding: 2.5px;
@@ -538,32 +528,18 @@ h2 {
     font-family: "Noto Serif", sans-serif;
   }
 
-
   #banner-register {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 5rem;
+    padding: 3rem;
   }
 
   #form-wrapper h2 {
-
     font-size: 1.4rem;
+  }
 
-
+  #form-wrapper li {
+    font-size: 0.5em;
+  }
 }
-
-#form-wrapper li {
-
-  font-size: 0.5em;
-}
-
-
-}
-
 
 @media screen and (max-width: 480px) {
   .logoTextoImg {
@@ -606,7 +582,6 @@ h2 {
     font-size: 1.5rem;
   }
 
-
   .card-banner h1 {
     margin-top: 1vh;
     margin-bottom: 1vh;
@@ -634,7 +609,7 @@ h2 {
   }
 
   .container {
-    max-width: 20rem;
+    max-width: 25rem;
     flex-direction: column;
     margin-block: 1.5rem;
   }
@@ -652,7 +627,6 @@ h2 {
     padding-left: 2rem;
     padding-right: 2.5rem;
     padding-bottom: 1rem;
-  
   }
 
   .controls {
@@ -674,20 +648,14 @@ h2 {
     font-size: 0.5rem;
   }
 
-
   #form-wrapper h2 {
-
     font-size: 1.4rem;
+  }
 
-
+  #form-wrapper li {
+    font-size: 0.5em;
+  }
+  #banner-register {
+    padding: 2rem;
+  }
 }
-
-#form-wrapper li {
-
-  font-size: 0.5em;
-}
-
-
-
-}
-
