correcion para validator

--- a/views/register.html
+++ b/views/register.html
@@ -1,94 +1,126 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- vinculación con estilos y favicon -->
+    <!-- <link rel="stylesheet" href="../static/css/style.css" /> -->
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
+    <title>Campeones del Mundo</title>
+    <!-- vinculación con google-fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/home.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- vinculación con estilos y favicon -->
-  <!-- <link rel="stylesheet" href="../static/css/style.css" /> -->
-  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
-  <title>Campeones del Mundo</title>
-  <!-- vinculación con google-fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="../css/home.css" />
+    <!-- vinculación fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/f7fb471b65.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <!-- vinculación fontawesome -->
-  <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <!-- Encabezado -->
-  <header class="header" id="idHeaderSecciones">
-    <!-- Agregado por JS -->
-  </header>
-  <main class="main">
-    <section id="banner-register" class="d-flex">
-      <div class="card-banner container">
-        <section id="form-wrapper">
-          <form action="#" method="post" novalidate id="form-register">
-            <h2>Registro</h2>
-            <div class="form-control">
-              <!-- <label for="name">Nombre</label> -->
-              <!-- <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre"> -->
-              <input class="controls" type="text" name="name" required id="name" placeholder="Ingrese su Nombre">
-            </div>
-            <div class="form-control">
-              <!-- <label for="last-name">Apellido</label> -->
-              <input class="controls" type="text" name="last-name" required id="last-name"
-                placeholder="Ingrese su Apellido">
-            </div>
-            <div class="form-control">
-              <!-- <label for="email">Email</label> -->
-              <input class="controls" type="email" name="email" required id="email" placeholder="Ingrese su email">
-            </div>
-            <div class="form-control">
-              <!-- <label for="passw">Contraseña</label> -->
-              <input class="controls" type="password" name="name" required id="passw "
-                placeholder="Ingrese su Contraseña">
-            </div>
-            <div class="form-control">
-              <label for="date">Fecha de nacimiento</label>
-              <input class="controls fecha" type="date" name="date" required id="date">
-            </div>
-            <div class="form-control">
-              <label for="date">Nacionalidad</label>
-              <select name="country" id="country" class="form-select">
-                <option value="">País</option>
-                <option value="AR">Argentina</option>
-                <option value="BO">Bolivia</option>
-                <option value="BR">Brasil</option>
-                <option value="UY">Uruguay</option>
-                <option value="CH">Chile</option>
-                <option value="PY">Paraguay</option>
-              </select>
-            </div>
-            <div class="form-terms">
-              <div class="terms">
-                <input type="checkbox" id="terms">
-                <label>Acepto términos y condiciones</label>
+  <body>
+    <!-- Encabezado -->
+    <header class="header" id="idHeaderSecciones">
+      <!-- Agregado por JS -->
+    </header>
+    <main class="main">
+      <section id="banner-register" class="d-flex">
+        <div class="card-banner container">
+          <section id="form-wrapper">
+            <form action="#" method="post" novalidate id="form-register">
+              <h2>Registro</h2>
+              <div class="form-control">
+                <!-- <label for="name">Nombre</label> -->
+                <!-- <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre"> -->
+                <input
+                  class="controls"
+                  type="text"
+                  name="name"
+                  required
+                  id="name"
+                  placeholder="Ingrese su Nombre"
+                />
               </div>
-            </div>
-            <button class="btn" type="submit">Registrate</button>
-            <button class="btn" type="reset">Borrar todo</button>
-            <div class="form-help">
-              <a href="#">¿Necesitas ayuda?</a>
-            </div>
-          </form>
-        </section>
+              <div class="form-control">
+                <!-- <label for="last-name">Apellido</label> -->
+                <input
+                  class="controls"
+                  type="text"
+                  name="last-name"
+                  required
+                  id="last-name"
+                  placeholder="Ingrese su Apellido"
+                />
+              </div>
+              <div class="form-control">
+                <!-- <label for="email">Email</label> -->
+                <input
+                  class="controls"
+                  type="email"
+                  name="email"
+                  required
+                  id="email"
+                  placeholder="Ingrese su email"
+                />
+              </div>
+              <div class="form-control">
+                <!-- <label for="passw">Contraseña</label> -->
+                <input
+                  class="controls"
+                  type="password"
+                  name="name"
+                  required
+                  id="passw"
+                  placeholder="Ingrese su Contraseña"
+                />
+              </div>
+              <div class="form-control">
+                <label for="date">Fecha de nacimiento</label>
+                <input
+                  class="controls fecha"
+                  type="date"
+                  name="date"
+                  required
+                  id="date"
+                />
+              </div>
+              <div class="form-control">
+                <label for="date">Nacionalidad</label>
+                <select name="country" id="country" class="form-select">
+                  <option value="">País</option>
+                  <option value="AR">Argentina</option>
+                  <option value="BO">Bolivia</option>
+                  <option value="BR">Brasil</option>
+                  <option value="UY">Uruguay</option>
+                  <option value="CH">Chile</option>
+                  <option value="PY">Paraguay</option>
+                </select>
+              </div>
+              <div class="form-terms">
+                <div class="terms">
+                  <input type="checkbox" id="terms" />
+                  <label>Acepto términos y condiciones</label>
+                </div>
+              </div>
+              <button class="btn" type="submit">Registrate</button>
+              <button class="btn" type="reset">Borrar todo</button>
+              <div class="form-help">
+                <a href="#">¿Necesitas ayuda?</a>
+              </div>
+            </form>
+          </section>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-container" id="idFooterSecciones">
+      <!-- Agregado por JS -->
+    </footer>
 
-
-    </section>
-
-
-  </main>
-  <footer class="footer-container" id="idFooterSecciones">
- <!-- Agregado por JS -->
-  </footer>
- 
-  <script src="../JS/index.js"></script>
-</body>
-
+    <script src="../JS/index.js"></script>
+  </body>
 </html>
